# dorsey-a-share-autotrader

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: default.yaml
config/schema_migrations/: v1_to_v1_1.yaml
config/schemas/: provider_contract_candidate.yaml  provider_contract_v1.yaml
data/sample/: data_quality_cases.csv  financial_snapshot.csv  historical_market_snapshot.csv  market_snapshot.csv  stock_basic.csv  trading_calendar.csv
docs/architecture/: v0.11.0_architecture_review.md  v0.11.0_capability_map.md  v0.11.0_pre_real_data_gap_analysis.md  v0.11.0_stop_doing_list.md
src/dorsey_as/: __init__.py  __main__.py  audit.py  bootstrap.py  (+4 more)
tests/: safety_scan_helpers.py  test_adapter_contracts.py  test_backtest.py  test_config_reporting.py  test_data_quality.py  test_execution_adapter.py  test_factors.py  test_html_notify_audit.py  test_point_in_time_schema_factor_audit.py  test_portfolio_engine.py  test_pre_live_safety_gate.py  test_risk.py  test_risk_engine.py  test_runtime_artifact_validation.py  test_runtime_cli.py  test_runtime_flow.py  test_runtime_ledger.py  test_runtime_ledger_flow.py  test_runtime_portfolio_flow.py  test_runtime_replay.py  test_runtime_replay_flow.py  test_runtime_report.py  test_runtime_report_flow.py  test_runtime_risk_flow.py  test_runtime_scenario_cli.py  test_runtime_scenario_report.py  test_runtime_scenario_report_flow.py  test_runtime_scenarios.py  test_schema_migration_visualization.py  test_schema_versioning_contract_diff.py  test_scoring_portfolio_broker.py  test_strategy_engine.py  test_system_health_release.py
(+115 files in other folders)
